horizontal overflow fix

--- a/css/zigninnovations.css
+++ b/css/zigninnovations.css
@@ -365,6 +365,11 @@ h1 {
         padding: 5px 10px !important;
     }
 
+    #section10 .intro p.contactDetails {
+      margin-top: 100px;
+      position: relative !important;
+      left: 0 !important;
+    }
 
 }
 
